--- a/withdraw.html
+++ b/withdraw.html
@@ -129,13 +129,13 @@
 
 <div class="container">
   <div class="card">
-    <h3>Available  </h3>
-    <p><strong><span id="currency-symbol">$</span><span id="balance">0</span></strong></p>
+    <p><strong><span id="currency-symbol">$</span><span id="balance">0.00 </span></strong></p>           
+     <h3>Available  </h3>
   </div>
 
   <div class="withdraw-section">
     <label for="amount"></label><br/>
-    <span style="font-size: 24px;" id="input-currency">$</span>
+    <span style="font-size: 24px;" id="input-currency"></span>
     <input type="number" id="amount" min="0" />
      <h4>Withdrew Amount </h4>
   </div>
