--- a/dashboard.html
+++ b/dashboard.html
@@ -15,25 +15,24 @@
     body {
       background-color: #000;
       color: white;
-      /* Adjusted base font size for better scaling */
-      font-size: 16px; /* A good base, then use rem for relative sizing */
+      font-size: 16px;
     }
 
     header {
       background-color: #000;
       text-align: center;
       padding: 1rem;
-      font-size: 1.8rem; /* Adjusted font size */
+      font-size: 1.8rem;
     }
 
     .welcome-section {
       background-color: #091dfc;
       text-align: left;
-      height: 150px; /* Adjusted height */
+      height: 150px;
       display: flex;
       align-items: center;
       padding: 0 1rem;
-      margin-bottom: 1.5rem; /* Adjusted margin */
+      margin-bottom: 1.5rem;
     }
 
     .welcome-content {
@@ -43,42 +42,36 @@
     }
 
     .welcome-content img {
-      width: 70px; /* Adjusted size */
-      height: 70px; /* Adjusted size */
-      border-radius: 50%; /* Make it circular */
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
       object-fit: cover;
     }
 
     .welcome-content h2 {
-      font-size: 2.2rem; /* Adjusted font size */
+      font-size: 2.2rem;
       color: white;
       margin: 0;
     }
 
     .balance-card {
       background-color: #222;
-      margin: -2rem 1rem 1rem; /* Adjust negative margin if needed based on header/welcome section layout */
+      margin: -2rem 1rem 1rem;
       padding: 1.5rem;
       border-radius: 10px;
       text-align: center;
     }
 
     .balance-card .amount {
-      font-size: 3.5rem; /* Adjusted font size */
+      font-size: 3.5rem;
       color: orange;
       margin-bottom: 0.3rem;
     }
 
-    /* Removed .usd class as currency will be dynamic */
-    /* .balance-card .usd {
-      font-size: 2.9rem;
-      color: #aaa;
-    } */
-
     .balance-card .label {
       margin: 0.5rem 0 1rem;
       color: #aaa;
-      font-size: 1.1rem; /* Adjusted font size */
+      font-size: 1.1rem;
     }
 
     .balance-card .buttons {
@@ -93,17 +86,18 @@
       border: none;
       border-radius: 6px;
       padding: 0.6rem 1.2rem;
-      font-size: 1rem; /* Adjusted font size */
+      font-size: 1rem;
       flex: 1;
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 6px;
       cursor: pointer;
-      transition: background-color 0.3s ease; /* Added transition */
+      transition: background-color 0.3s ease;
     }
+
     .balance-card button:hover {
-        background-color: #001bff; /* Darker blue on hover */
+      background-color: #001bff;
     }
 
     .balance-card button a {
@@ -120,7 +114,7 @@
       padding: 1rem;
       border-radius: 10px;
       text-align: center;
-      font-size: 1.1rem; /* Adjusted font size */
+      font-size: 1.1rem;
     }
 
     .welcome-message i {
@@ -134,12 +128,12 @@
 
     .services h3 {
       margin-bottom: 1rem;
-      font-size: 1.8rem; /* Adjusted font size */
+      font-size: 1.8rem;
     }
 
     .service-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); /* Responsive grid */
+      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
       gap: 1rem;
     }
 
@@ -148,17 +142,18 @@
       border-radius: 8px;
       padding: 0.8rem 0;
       text-align: center;
-      font-size: 1rem; /* Adjusted font size */
+      font-size: 1rem;
       color: white;
       cursor: pointer;
-      transition: background-color 0.3s ease; /* Added transition */
+      transition: background-color 0.3s ease;
     }
+
     .service-item:hover {
-        background-color: #333; /* Darker grey on hover */
+      background-color: #333;
     }
 
     .service-item i {
-      font-size: 1.5rem; /* Adjusted font size */
+      font-size: 1.5rem;
       display: block;
       margin-bottom: 0.3rem;
       color: #1a2cff;
@@ -233,10 +228,10 @@
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
     import { getFirestore, doc, onSnapshot } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
-    import { getAuth, signOut } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"; // Import getAuth and signOut
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyDtCfsMkc_Z_9ZeF0TEHTDFBzLlkU-egSc", // Make sure this is your actual API Key
+      apiKey: "AIzaSyDtCfsMkc_Z_9ZeF0TEHTDFBzLlkU-egSc",
       authDomain: "tradevanta-a3e0d.firebaseapp.com",
       projectId: "tradevanta-a3e0d",
       storageBucket: "tradevanta-a3e0d.appspot.com",
@@ -246,92 +241,69 @@
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
-    const auth = getAuth(app); // Get auth instance
+    const auth = getAuth(app);
 
-    // Currency map moved here to be accessible within the module scope
     const currencySymbols = {
       USD: '$', EUR: '€', GBP: '£',
       INR: '₹', CAD: 'C$', AUD: 'A$',
-      NGN: '₦', JPY: '¥', // Added NGN and JPY as per common use
-      // Add more as needed
+      NGN: '₦', JPY: '¥'
     };
 
     function updateBalanceDisplay(balance, currencyCode) {
-      const symbol = currencySymbols[currencyCode] || '$'; // Fallback to '$' if currency code not found
+      const symbol = currencySymbols[currencyCode] || '$';
       document.getElementById('balance-amount').textContent = `≈ ${symbol}${parseFloat(balance).toFixed(2)}`;
     }
 
-    function listenToUserData() {
-      const userId = localStorage.getItem("userId"); // <--- THIS IS THE CRITICAL LINE
-      if (!userId) {
-        console.error("User ID not found in localStorage. Redirecting to login.");
-        // If user ID is missing, redirect to login page
-        window.location.href = "login.html"; // Or your main authentication page
-        return; // Stop execution
-      }
-
+    function listenToUserData(userId) {
       const userRef = doc(db, "users", userId);
       onSnapshot(userRef, (docSnap) => {
         if (docSnap.exists()) {
           const data = docSnap.data();
           document.getElementById("welcome-username").textContent = `Welcome, ${data.username || 'User'}`;
-          updateBalanceDisplay(data.balance || 0, data.currency || 'USD'); // Pass currency code
+          updateBalanceDisplay(data.balance || 0, data.currency || 'USD');
         } else {
-          console.log("User document does not exist in Firestore. Logging out.");
-          // If user document is somehow deleted, log out and redirect
-          signOut(auth).then(() => {
-            localStorage.clear();
-            window.location.href = "login.html";
-          }).catch((error) => {
-            console.error("Error signing out after missing doc:", error);
-            localStorage.clear();
-            window.location.href = "login.html";
-          });
+          console.log("User document does not exist. Signing out.");
+          signOut(auth).then(() => window.location.href = "login.html");
         }
-      }, (error) => {
-        console.error("Error listening to user document:", error);
-        // Optionally, handle specific errors (e.g., permission denied)
-        alert("Failed to load user data. Please try again or re-login.");
-        signOut(auth).then(() => {
-          localStorage.clear();
-          window.location.href = "login.html";
-        });
       });
     }
 
-    document.addEventListener("DOMContentLoaded", () => {
-      listenToUserData();
-
-      // JivoChat listeners
-      function openJivoChat() {
-        if (window.jivo_api) jivo_api.open();
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        listenToUserData(user.uid);
+      } else {
+        window.location.href = "login.html";
       }
-      document.getElementById('deposit-button').addEventListener('click', openJivoChat);
-      document.getElementById('transfer-button').addEventListener('click', openJivoChat);
+    });
+
+    document.addEventListener("DOMContentLoaded", () => {
+      document.getElementById('deposit-button').addEventListener('click', () => {
+        if (window.jivo_api) jivo_api.open();
+      });
+
+      document.getElementById('transfer-button').addEventListener('click', () => {
+        if (window.jivo_api) jivo_api.open();
+      });
 
       const serviceItems = document.querySelectorAll('.service-item');
       serviceItems.forEach(item => {
-        const isLogout = item.id === 'logout-button';
-        const isHistory = item.id === 'history-button';
-        if (!isLogout && !isHistory) {
-          item.addEventListener('click', openJivoChat);
+        if (!['logout-button', 'history-button'].includes(item.id)) {
+          item.addEventListener('click', () => {
+            if (window.jivo_api) jivo_api.open();
+          });
         }
       });
 
-      // Logout Functionality (using Firebase signOut)
       document.getElementById('logout-button').addEventListener('click', async () => {
         try {
-          await signOut(auth); // Sign out from Firebase
-          localStorage.clear(); // Clear all data from localStorage
-          alert("You have been successfully logged out.");
-          window.location.href = 'login.html'; // Redirect to login page
+          await signOut(auth);
+          alert("You have been logged out.");
+          window.location.href = "login.html";
         } catch (error) {
-          console.error("Logout Error:", error);
-          alert("Failed to log out: " + error.message);
+          console.error("Logout error:", error);
         }
       });
 
-      // Navigation for History button
       document.getElementById('history-button').addEventListener('click', () => {
         window.location.href = 'history.html';
       });
