--- a/withdraw.html
+++ b/withdraw.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Withdraw</title>
+
+  <!-- Firebase Libraries -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+
+  <!-- Styles -->
   <style>
-    /* Same CSS as before, no changes needed */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -49,12 +52,6 @@
       border-bottom: 1px solid #ccc;
       width: 100px;
       outline: none;
-    }
-
-    .note {
-      font-size: 14px;
-      color: #777;
-      margin-top: 5px;
     }
 
     .bank-info, .add-bank-form {
@@ -172,17 +169,17 @@
 
   let userBalance = 0;
   let userCurrency = '$';
-  let bankAdded = false;
   let userId = null;
+  let bankAdded = false;
 
-  // Wait for user to be authenticated
+  // Check if user is logged in
   firebase.auth().onAuthStateChanged((user) => {
     if (user) {
       userId = user.uid;
       fetchUserInfo();
       checkBankAccount();
     } else {
-      alert("User not logged in. Redirecting to login...");
+      alert("User not logged in. Redirecting...");
       window.location.href = "login.html";
     }
   });
@@ -239,8 +236,8 @@
 
     try {
       await db.collection("withdrawals").add({
-        userId: userId,
-        amount: amount,
+        userId,
+        amount,
         currency: userCurrency,
         status: "pending",
         createdAt: new Date().toISOString()
@@ -249,21 +246,19 @@
       const userRef = dbBalance.collection("users").doc(userId);
       await dbBalance.runTransaction(async (transaction) => {
         const userDoc = await transaction.get(userRef);
-        if (!userDoc.exists) throw "User not found in balance DB.";
+        if (!userDoc.exists) throw "User not found.";
         const currentBalance = userDoc.data().balance || 0;
-        if (amount > currentBalance) throw "Insufficient balance.";
+        if (amount > currentBalance) throw "Insufficient funds.";
         transaction.update(userRef, {
           balance: currentBalance - amount
         });
       });
 
       alert('Withdrawal initiated!');
-      setTimeout(() => {
-        window.location.href = "dashboard.html";
-      }, 2000);
+      setTimeout(() => window.location.href = "dashboard.html", 2000);
     } catch (error) {
       console.error("Withdrawal error:", error);
-      alert("Error processing withdrawal. Please try again.");
+      alert("Error processing withdrawal.");
     }
   });
 
